tests/interpreter/assign-statement-expression-error.stderr
error: identifier 'foo' is not defined
 --> $DIR/assign-statement-expression-error.lox:2:5
  |
2 | x = foo;
  |     ^^^
